sonarcube lint error fixed